--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -4,6 +4,9 @@
     android:layout_width="130dp"
     android:layout_height="195dp"
     android:layout_marginEnd="16dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?attr/selectableItemBackground"
     app:cardCornerRadius="0dp"
     app:cardElevation="4dp"
     android:alpha="0.9"
